--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -276,10 +276,8 @@ jobs:
         brew update > brew_update.log || { print_error "Updating homebrew failed"; cat brew_update.log; exit 1; }
         brew install lua
 
-    - run: brew list
-    - run: brew list --versions lua
-    - run: brew info lua
-    - run: brew list --versions zlib-devel
+    - run: otool -L /usr/lib/libz.dylib
+    - run: otool -L /usr/lib/libz.dylib | sed -ne 's/  /usr/lib/libz.dylib ([^,]+, current version \([^)]+\))/\1/p'
 
     - name: Install CMake
       uses: ./.github/actions/install-cmake
