--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -278,7 +278,7 @@ jobs:
         brew install lua
 
     - run: otool -L /usr/lib/libz.dylib
-    - run: otool -L /usr/lib/libz.dylib | sed -ne 's/  /usr/lib/libz.dylib ([^,]+, current version \([^)]+\))/\1/p'
+    - run: otool -L /usr/lib/libz.dylib | sed -ne 's#\s*/usr/lib/libz.*\.dylib ([^,]+, current version \([^)]+\))#\1#p'
 
     - name: Install CMake
       uses: ./.github/actions/install-cmake
