--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -229,7 +229,7 @@ jobs:
 
     - name: Version summary
       run: |
-        msys2do echo "Hunspell:     ${{ matrix.hunspell }}"
+        msys2do echo \"Hunspell:     ${{ matrix.hunspell }}\"
 
 #        msys2do echo `\`"Lua:          `\`"
 #        msys2do echo `\`"Poppler:      ${{ matrix.poppler }}`\"
