--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -281,6 +281,9 @@ jobs:
     - run: otool -L /usr/lib/libz.dylib
     - run: otool -L /usr/lib/libz.dylib | sed -ne 's|\s*/usr/lib/libz||p'
     - run: otool -L /usr/lib/libz.dylib | sed -ne 's|\s*/usr/lib/libz.*\.dylib ||p'
+    - run: otool -L /usr/lib/libz.dylib | sed -ne 's|\s*/usr/lib/libz.*\.dylib (||p'
+    - run: otool -L /usr/lib/libz.dylib | sed -ne 's|\s*/usr/lib/libz.*\.dylib \(||p'
+    - run: otool -L /usr/lib/libz.dylib | sed -ne 's|\s*/usr/lib/libz.*\.dylib ([^,]+,||p'
     - run: otool -L /usr/lib/libz.dylib | sed -ne 's|\s*/usr/lib/libz.*\.dylib ([^,]\+,||p'
     - run: otool -L /usr/lib/libz.dylib | sed -ne 's|\s*/usr/lib/libz.*\.dylib ([^,]\+, current version ||p'
     - run: otool -L /usr/lib/libz.dylib | sed -ne 's|\s*/usr/lib/libz.*\.dylib ([^,]\+, current version \([^)]\+\))|\1|p'
