more sed variants

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -281,10 +281,12 @@ jobs:
     - run: otool -L /usr/lib/libz.dylib | sed -ne 's|\s*/usr/lib/libz||p'
     - run: otool -L /usr/lib/libz.dylib | sed -ne 's|\s*/usr/lib/libz.*\.dylib ||p'
     - run: otool -L /usr/lib/libz.dylib | sed -ne 's|\s*/usr/lib/libz.*\.dylib (||p'
+    - run: otool -L /usr/lib/libz.dylib | sed -ne 's|\s*/usr/lib/libz.*\.dylib ([^,]*,||p'
     - run: otool -L /usr/lib/libz.dylib | sed -ne 's|\s*/usr/lib/libz.*\.dylib ([^,]+,||p'
     - run: otool -L /usr/lib/libz.dylib | sed -ne 's|\s*/usr/lib/libz.*\.dylib ([^,]\+,||p'
     - run: otool -L /usr/lib/libz.dylib | sed -ne 's|\s*/usr/lib/libz.*\.dylib ([^,]\+, current version ||p'
     - run: otool -L /usr/lib/libz.dylib | sed -ne 's|\s*/usr/lib/libz.*\.dylib ([^,]\+, current version \([^)]\+\))|\1|p'
+    - run: otool -L /usr/lib/libz.dylib | sed -ne 's|\s*/usr/lib/libz.*\.dylib ([^,]*, current version \([^)]*\))|\1|p'
 
     - name: Install CMake
       uses: ./.github/actions/install-cmake
