--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -229,7 +229,8 @@ jobs:
 
     - name: Version summary
       run: |
-        msys2do echo `\`"Hunspell:     ${{ matrix.hunspell }}`\`\nPoppler:      ${{ matrix.poppler }}`\"
+        msys2do echo `\`"Hunspell:     ${{ matrix.hunspell }} Poppler:      ${{ matrix.poppler }}`\"
+#        msys2do echo `\`"Hunspell:     ${{ matrix.hunspell }}`\`\nPoppler:      ${{ matrix.poppler }}`\"
 
 #        msys2do echo `\`"Lua:          `\`"
 #        msys2do echo `\`"Poppler-data: ${{ matrix.poppler-data }}`\`"
