--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -280,6 +280,9 @@ jobs:
 
     - run: otool -L /usr/lib/libz.dylib | sed -ne 's|\s*/usr/lib/libz.*\.dylib ([^,]*, current version \([^)]*\))|\1|p'
     - run: otool -L /usr/lib/libz.dylib | sed -ne 's|[:space:]*/usr/lib/libz.*\.dylib ([^,]*, current version \([^)]*\))|\1|p'
+    - run: echo "$(otool -L /usr/lib/libz.dylib | sed -ne 's|[:space:]*/usr/lib/libz.*\\.dylib ([^,]*, current version \\([^)]*\\))|\\1|p')"
+    - run: echo "`otool -L /usr/lib/libz.dylib | sed -ne 's|[:space:]*/usr/lib/libz.*\\.dylib ([^,]*, current version \\([^)]*\\))|\\1|p'`"
+    - run: echo "$(otool -L /usr/lib/libz.dylib | sed -ne 's|[:space:]*/usr/lib/libz.*\.dylib ([^,]*, current version \([^)]*\))|\1|p')"
 
     - name: Install CMake
       uses: ./.github/actions/install-cmake
