--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -278,11 +278,10 @@ jobs:
         brew update > brew_update.log || { print_error "Updating homebrew failed"; cat brew_update.log; exit 1; }
         brew install lua
 
-    - run: otool -L /usr/lib/libz.dylib | sed -ne 's|\s*/usr/lib/libz.*\.dylib ([^,]*, current version \([^)]*\))|\1|p'
-    - run: otool -L /usr/lib/libz.dylib | sed -ne 's|[:space:]*/usr/lib/libz.*\.dylib ([^,]*, current version \([^)]*\))|\1|p'
-    - run: echo "$(otool -L /usr/lib/libz.dylib | sed -ne 's|[:space:]*/usr/lib/libz.*\\.dylib ([^,]*, current version \\([^)]*\\))|\\1|p')"
-    - run: echo "`otool -L /usr/lib/libz.dylib | sed -ne 's|[:space:]*/usr/lib/libz.*\\.dylib ([^,]*, current version \\([^)]*\\))|\\1|p'`"
     - run: echo "$(otool -L /usr/lib/libz.dylib | sed -ne 's|[:space:]*/usr/lib/libz.*\.dylib ([^,]*, current version \([^)]*\))|\1|p')"
+    - run: echo "Zlib: $(otool -L /usr/lib/libz.dylib | sed -ne 's|[:space:]*/usr/lib/libz.*\.dylib ([^,]*, current version \([^)]*\))|\1|p')"
+    - run: echo "Zlib: $(otool -L /usr/lib/libz.dylib | sed -ne 's|\s*/usr/lib/libz.*\.dylib ([^,]*, current version \([^)]*\))|\1|p')"
+    - run: echo "Zlib: $(otool -L /usr/lib/libz.dylib | sed -ne 's| */usr/lib/libz.*\.dylib ([^,]*, current version \([^)]*\))|\1|p')"
 
     - name: Install CMake
       uses: ./.github/actions/install-cmake
