--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -279,9 +279,9 @@ jobs:
         brew install lua
 
     - run: echo "$(otool -L /usr/lib/libz.dylib | sed -ne 's|[:space:]*/usr/lib/libz.*\.dylib ([^,]*, current version \([^)]*\))|\1|p')"
-    - run: echo "Zlib: $(otool -L /usr/lib/libz.dylib | sed -ne 's|[:space:]*/usr/lib/libz.*\.dylib ([^,]*, current version \([^)]*\))|\1|p')"
-    - run: echo "Zlib: $(otool -L /usr/lib/libz.dylib | sed -ne 's|\s*/usr/lib/libz.*\.dylib ([^,]*, current version \([^)]*\))|\1|p')"
-    - run: echo "Zlib: $(otool -L /usr/lib/libz.dylib | sed -ne 's| */usr/lib/libz.*\.dylib ([^,]*, current version \([^)]*\))|\1|p')"
+    - run: echo "Zlib $(otool -L /usr/lib/libz.dylib | sed -ne 's|[:space:]*/usr/lib/libz.*\.dylib ([^,]*, current version \([^)]*\))|\1|p')"
+    - run: echo "Zlib $(otool -L /usr/lib/libz.dylib | sed -ne 's|\s*/usr/lib/libz.*\.dylib ([^,]*, current version \([^)]*\))|\1|p')"
+    - run: echo "Zlib $(otool -L /usr/lib/libz.dylib | sed -ne 's| */usr/lib/libz.*\.dylib ([^,]*, current version \([^)]*\))|\1|p')"
 
     - name: Install CMake
       uses: ./.github/actions/install-cmake
