--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -200,7 +200,7 @@ jobs:
 
     - name: Version summary
       run: |
-        msys2do echo -e `\`"Hunspell:     ${{ matrix.hunspell }}`\nPoppler:      ${{ matrix.poppler }}`\`"
+        msys2do 'echo -e `\`"Hunspell:     ${{ matrix.hunspell }}`\nPoppler:      ${{ matrix.poppler }}`\`"'
 #        msys2do echo `\`"Hunspell:     ${{ matrix.hunspell }}`\`\nPoppler:      ${{ matrix.poppler }}`\"
 
 #        msys2do echo `\`"Lua:          `\`"
