--- a/modules/QtPDF/CMakeLists.txt
+++ b/modules/QtPDF/CMakeLists.txt
@@ -444,6 +444,7 @@ message("  Version info")
 
 CONFIG_VERSION("${PROJECT_NAME}" ${PROJECT_VERSION})
 CONFIG_VERSION("CMake" ${CMAKE_VERSION})
+CONFIG_VERSION("Compiler" "${CMAKE_CXX_COMPILER_ID} ${CMAKE_CXX_COMPILER_VERSION}")
 if (WITH_POPPLERQT)
   CONFIG_VERSION("Poppler" "${Poppler_VERSION_STRING}")
 endif ()
