--- a/.github/workflows/mxe.yml
+++ b/.github/workflows/mxe.yml
@@ -19,7 +19,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Build
-      run: docker build --platform linux -t "tw" -f .github/workflows/mxe.docker .
+      run: DOCKER_CLI_EXPERIMENTAL=enabled docker build --platform linux -t "tw" -f .github/workflows/mxe.docker .
 
 # docker build -t 'tw' -f .github/workflows/Dockerfile .
 # docker create --name tw tw
