--- a/.github/workflows/mxe.yml
+++ b/.github/workflows/mxe.yml
@@ -19,7 +19,9 @@ jobs:
       uses: actions/checkout@v2
 
     - run: docker version
-    - run: Get-Content -Path C:\ProgramData\Docker\config\daemon.json -Raw
+#    - run: Get-Content -Path C:\ProgramData\Docker\config\daemon.json -Raw
+    - run: sc start Docker --experimental
+    - run: docker version
 
     - name: Build
       run: DOCKER_CLI_EXPERIMENTAL=enabled docker build --platform linux -t "tw" -f .github/workflows/mxe.docker .
