--- a/.github/workflows/mxe.yml
+++ b/.github/workflows/mxe.yml
@@ -19,6 +19,9 @@ jobs:
       uses: actions/checkout@v2
 
     - run: docker version
+    - run: |
+      Set-Variable -Name DOCKER_CLI_EXPERIMENTAL -Value enabled
+      docker version
 #    - run: Get-Content -Path C:\ProgramData\Docker\config\daemon.json -Raw
     - run: sc start Docker --experimental
     - run: docker version
