--- a/.github/workflows/mxe.yml
+++ b/.github/workflows/mxe.yml
@@ -19,11 +19,12 @@ jobs:
       uses: actions/checkout@v2
 
     - run: docker version
-    - run: |
-        Set-Variable -Name DOCKER_CLI_EXPERIMENTAL -Value enabled
-        docker version
+#    - run: |
+#        Set-Variable -Name DOCKER_CLI_EXPERIMENTAL -Value enabled
+#        docker version
 #    - run: Get-Content -Path C:\ProgramData\Docker\config\daemon.json -Raw
-    - run: sc start Docker --experimental
+#    - run: sc start Docker --experimental
+    - run: sc config docker --experimental
     - run: docker version
 
     - name: Build
