--- a/.github/workflows/mxe.yml
+++ b/.github/workflows/mxe.yml
@@ -26,11 +26,13 @@ jobs:
     - run: docker version
 #    - run: Get-Content -Path C:\ProgramData\Docker\config\daemon.json -Raw
 #    - run: sc start Docker --experimental
-    - run: sc config Docker experimental=enabled
-    - run: docker version
+#    - run: sc config Docker experimental=enabled
+#    - run: docker version
 
     - name: Build
-      run: DOCKER_CLI_EXPERIMENTAL=enabled docker build --platform linux -t "tw" -f .github/workflows/mxe.docker .
+      run: |
+        $Env:DOCKER_CLI_EXPERIMENTAL="enabled"
+        docker build --platform linux -t "tw" -f .github/workflows/mxe.docker .
 
 # docker build -t 'tw' -f .github/workflows/Dockerfile .
 # docker create --name tw tw
