--- a/.github/workflows/mxe.yml
+++ b/.github/workflows/mxe.yml
@@ -132,6 +132,7 @@ jobs:
     needs: build
     runs-on: windows-latest
 
+    steps:
     - name: Download Unit-Tests
       uses: actions/download-artifact@v2
       with:
