--- a/.github/workflows/mxe.yml
+++ b/.github/workflows/mxe.yml
@@ -142,12 +142,12 @@ jobs:
     - name: Run Tests
       run: cd build && ctest -v
 
-  mac-screenshot:
-    runs-on: macos-latest
-
-    steps:
-    - run: screencapture -x ${GITHUB_WORKSPACE}/macos.jpg
-    - uses: actions/upload-artifact@v2
-      with:
-        name: macos.jpg
-        path: macos.jpg
+#  mac-screenshot:
+#    runs-on: macos-latest
+#
+#    steps:
+#    - run: screencapture -x ${GITHUB_WORKSPACE}/macos.jpg
+#    - uses: actions/upload-artifact@v2
+#      with:
+#        name: macos.jpg
+#        path: macos.jpg
