--- a/.github/workflows/mxe.yml
+++ b/.github/workflows/mxe.yml
@@ -142,7 +142,7 @@ jobs:
         name: unittests
 
     - name: Run Tests
-      run: cd build && ctest /V
+      run: cd build && ctest --verbose
 
 #  mac-screenshot:
 #    runs-on: macos-latest
