Try not stripping tests

--- a/.github/workflows/mxe.yml
+++ b/.github/workflows/mxe.yml
@@ -99,8 +99,10 @@ jobs:
         cd build
         make -j
         ls -lisah
-        ${MXEDIR}/usr/bin/${MXETARGET}-strip *.exe
+        ${MXEDIR}/usr/bin/${MXETARGET}-strip TeXworks.exe
         ls -lisah
+
+#        ${MXEDIR}/usr/bin/${MXETARGET}-strip *.exe
 
     - name: Package
       run: |
