--- a/.github/workflows/mxe.yml
+++ b/.github/workflows/mxe.yml
@@ -142,7 +142,10 @@ jobs:
         name: unittests
 
     - name: Run Tests
-      run: cd build && ctest --extra-verbose --interactive-debug-mode=0 --output-on-failure
+      run: |
+        cd build
+        ctest --extra-verbose --interactive-debug-mode=0 --output-on-failure -O test.log
+        type test.log
 
 #  mac-screenshot:
 #    runs-on: macos-latest
