--- a/modules/QtPDF/CMakeLists.txt
+++ b/modules/QtPDF/CMakeLists.txt
@@ -388,6 +388,7 @@ IF ( WITH_TESTS )
   SET(QTPDFTEST_HDRS
     ${CMAKE_CURRENT_SOURCE_DIR}/unit-tests/TestQtPDF.h
   )
+  message("CMAKE_WIN32_EXECUTABLE = ${CMAKE_WIN32_EXECUTABLE}")
   IF( WITH_POPPLERQT )
     ADD_EXECUTABLE(test_poppler-qt${QT_VERSION_MAJOR}
       ${QTPDFTEST_SRCS}
