Try to run test_BibTeXFile.exe manually

--- a/.github/workflows/mxe.yml
+++ b/.github/workflows/mxe.yml
@@ -141,6 +141,8 @@ jobs:
       with:
         name: unittests
 
+    - run: build/test_BibTeXFile.exe
+
     - name: Run Tests
       shell: bash
       run: |
