--- a/.github/workflows/mxe.yml
+++ b/.github/workflows/mxe.yml
@@ -141,7 +141,7 @@ jobs:
       with:
         name: unittests
 
-    - run: build/test_BibTeXFile.exe
+    - run: build\test_BibTeXFile.exe
 
     - name: Run Tests
       shell: bash
