--- a/.github/workflows/mxe.yml
+++ b/.github/workflows/mxe.yml
@@ -142,9 +142,15 @@ jobs:
         name: unittests
 
     - name: Install CMake
-      uses: ./.github/actions/install-cmake
-      with:
-        version: '3.17.2'
+#      uses: ./.github/actions/install-cmake
+#      with:
+#        version: '3.17.2'
+      run: |
+        cmake --version
+        Invoke-WebRequest -Uri "https://github.com/Kitware/CMake/releases/download/v3.17.2/cmake-3.17.2-win64-x64.zip"
+        7z x cmake-3.17.2-win64-x64.zip
+        echo "::add-path::$(pwd)\cmake-3.17.2-win64-x64\bin"
+        cmake --version
 
     - run: dir
     - run: dir build
