--- a/.github/workflows/mxe.yml
+++ b/.github/workflows/mxe.yml
@@ -149,6 +149,8 @@ jobs:
         cmake --version
         Invoke-WebRequest -Uri "https://github.com/Kitware/CMake/releases/download/v3.16.3/cmake-3.16.3-win64-x64.zip" -OutFile "cmake-3.16.3-win64-x64.zip"
         7z x cmake-3.16.3-win64-x64.zip
+        dir
+        dir cmake-3.16.3-win64-x64
         echo "::add-path::$(pwd)\cmake-3.16.3-win64-x64\bin"
         cmake --version
 
