--- a/.github/workflows/mxe.yml
+++ b/.github/workflows/mxe.yml
@@ -157,6 +157,9 @@ jobs:
     - run: dir
     - run: dir build
 
+    - run: cd testcases && ..\build\test_BibTeXFile.exe -h
+    - run: cd testcases && ..\build\test_BibTeXFile.exe
+
     - name: Run Tests
       shell: bash
       run: |
