--- a/.github/workflows/mxe.yml
+++ b/.github/workflows/mxe.yml
@@ -160,7 +160,8 @@ jobs:
     - run: dir build
 
     - run: cd testcases && ..\build\test_BibTeXFile.exe -help
-    - run: cd testcases && ..\build\test_BibTeXFile.exe
+    - run: cd testcases && ..\build\test_BibTeXFile.exe -vb -nocrashhandler
+    - run: cd testcases && ..\build\test_BibTeXFile.exe -o test.log & type test.log
 
     - name: Run Tests
       shell: bash
