--- a/.github/workflows/mxe.yml
+++ b/.github/workflows/mxe.yml
@@ -168,8 +168,7 @@ jobs:
     - name: Run Tests
       shell: bash
       run: |
-        cd build
-        ctest --verbose
+        Start-Process -FilePath ctest -Wait -NoNewWindow -ArgumentList "--verbose" -WorkingDirectory build
 
 #  mac-screenshot:
 #    runs-on: macos-latest
